# zuora-aqua-client-cli

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml
examples/: multi_query.zql  query.zql
tests/: test_zuora_aqua_client_cli.py
zuora_aqua_client_cli/: api.py  cli.py  consts.py  run_zooql.py  run_zoql.py
