[tool.poetry]
name = "zuora-aqua-client-cli"
version = "0.1.0"
description = "Run ZOQL queries through AQuA from the command line"
authors = ["Janos Molnar <janosmolnar1001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
